binds tmux ", % and c to start in current dir.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# set normal operations to open in the same dir
+bind '"' split-window -c '#{pane_current_path}'
+bind % split-window -h -c '#{pane_current_path}'
+bind c new-window -c '#{pane_current_path}' 
+
+
 # setting more subtle colors
 
 set -g pane-active-border-style fg=colour10
